--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hitachi.coe</groupId>
-    <artifactId>fullstack-coe-mgmt</artifactId>
-    <version>v0.0.1</version>
-    <name>fullstack-coe-mgmt</name>
+	<groupId>com.hitachi.coe</groupId>
+	<artifactId>fullstack-coe-mgmt</artifactId>
+	<version>v0.0.1</version>
+	<name>fullstack-coe-mgmt</name>
 
-    <parent>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-    <properties>
-        <aws.java.sdk.version>2.16.1</aws.java.sdk.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <postgresql.version>42.3.1</postgresql.version>
-        <springfox.version>3.0.0</springfox.version>
-
-        <docker.image.name>fullstack-coe-mgmt</docker.image.name>
-        <!-- Sonar -->
-        <sonar.coverage.exclusions>
-            src/main/java/com/hitachi/coe/fullstack/FullstackCoEApplication.java,
-            src/main/java/com/hitachi/coe/fullstack/audit/*,
-            src/main/java/com/hitachi/coe/fullstack/config/*,
-            src/main/java/com/hitachi/coe/fullstack/entity/*,
-            src/main/java/com/hitachi/coe/fullstack/model/*,
-            src/main/java/com/hitachi/coe/fullstack/util/*,
-            src/main/java/com/hitachi/coe/fullstack/constant/*
-        </sonar.coverage.exclusions>
-        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-        <sonar.language>java</sonar.language>
+	<properties>
+		<aws.java.sdk.version>2.16.1</aws.java.sdk.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<postgresql.version>42.3.1</postgresql.version>
+		<springfox.version>3.0.0</springfox.version>
+		<java.version>11</java.version>
+		<docker.image.name>fullstack-coe-mgmt</docker.image.name>
+		<!-- Sonar -->
+		<sonar.coverage.exclusions>
+			src/main/java/com/hitachi/coe/fullstack/FullstackCoEApplication.java,
+			src/main/java/com/hitachi/coe/fullstack/audit/*,
+			src/main/java/com/hitachi/coe/fullstack/config/*,
+			src/main/java/com/hitachi/coe/fullstack/entity/*,
+			src/main/java/com/hitachi/coe/fullstack/model/*,
+			src/main/java/com/hitachi/coe/fullstack/util/*,
+			src/main/java/com/hitachi/coe/fullstack/constant/*
+		</sonar.coverage.exclusions>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.language>java</sonar.language>
 	</properties>
 
-    <dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -71,9 +73,10 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
-			<version>${springfox.version}</version>
+			<version>3.0.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
+		<!--
+		https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-launcher</artifactId>
@@ -84,7 +87,11 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -97,8 +104,10 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.3</version>
 				<configuration>
-					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+					<destFile>
+						${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+					<dataFile>
+						${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
 					<output>file</output>
 					<append>true</append>
 					<excludes>
